--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Hello </h1>
-    <p>I love my Celine!!!</p>
+    <h1>Hello</h1>
+    <p>I love my Celine!!</p>
   </body>
 </html>
