--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
+
+
 <html>
-  <body>
+    <head>
+        <title>
+            Joan's Portfolio site
+        </title>
+    </head>
+
+ <body>
     <h1>Hello</h1>
+    <main>
+        <input id="tab0" type="radio" name="tabs" checked>
+        <label for="tab0">Home</label>
+        <input id="tab1" type="radio" name="tabs">
+        <label for="tab1">Impressive collection</label>
+
+
+        <section id="content0">
+            <p>
+                Potato potato! my baby is my sweet potato
+            </p>
+
+        </section>
+        <section id="content1">
+            <p>
+                more potatos
+            </p>
+        </section>
+    </main>
     <p>I love my Celine!</p>
   </body>
 </html>
