--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 
-
 <html>
-    <head>
-        <title>
-            Joan's Portfolio site
-        </title>
-    </head>
+  <head>
+    <title>Joan's Portfolio site</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
- <body>
+  <body>
     <h1>Hello</h1>
     <main>
-        <input id="tab0" type="radio" name="tabs" checked>
-        <label for="tab0">Home</label>
-        <input id="tab1" type="radio" name="tabs">
-        <label for="tab1">Impressive collection</label>
+      <input id="tab0" type="radio" name="tabs" checked />
+      <label for="tab0">Home</label>
+      <input id="tab1" type="radio" name="tabs" />
+      <label for="tab1">Stuff</label>
+      <input id="tab2" type="radio" name="tabs" checked />
+      <label for="tab2">More stuff!</label>
+      <input id="tab3" type="radio" name="tabs" />
+      <label for="tab3">Wow lots of stuff</label>
 
-
-        <section id="content0">
-            <p>
-                Potato potato! my baby is my sweet potato
-            </p>
-
-        </section>
-        <section id="content1">
-            <p>
-                more potatos
-            </p>
-        </section>
+      <section id="content0">
+        <p>Potato potato! my baby is my sweet potato</p>
+      </section>
+      <section id="content1">
+        <p>more potatos</p>
+      </section>
+      <section id="content2">
+        <p>Celine <3</p>
+      </section>
+      <section id="content3">
+        <p>OMG hi Celine <3</p>
+      </section>
     </main>
-    <p>I love my Celine!</p>
   </body>
 </html>
